--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Numenta.org
-tagline: Home of the Cortical Learning Algorithm
+tagline: Open&nbsp;Source Cortical&nbsp;Learning&nbsp;Algorithm
 
 baseurl:  /opencla
 
