--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Numenta.org
 tagline: Open&nbsp;Source Cortical&nbsp;Learning&nbsp;Algorithm
 
-baseurl: numenta.org 
+baseurl: / 
 
 markdown: maruku
 pygments: true
