--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Numenta.org
-tagline: Open&nbsp;Source Cortical&nbsp;Learning&nbsp;Algorithm
+tagline: Numenta&nbsp;Platform&nbsp;for Intelligent&nbsp;Computing<br/>(NuPIC)
 
 baseurl: http://numenta.org
 
